# user-service

./: .gitignore  Dockerfile  config.py  firebase_client.py  main.py  models.py  pyproject.toml
routes/: __init__.py  auth_routes.py  user_routes.py
services/: __init__.py  auth_service.py  user_service.py
tests/: test_main.py
